[package]
name = "dif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diff = { version = "0.1", registry = "ustc" }
argh = { version = "0.1.10", registry = "ustc" }
flate2 = {version = "1.0", registry = "ustc" }
termcolor = {version = "1.4.1", registry = "ustc" }
